# Decisiongraph-core-v1.3

./: .gitignore  Dockerfile  Dockerfile.claimpilot  README.md  dg  nixpacks.toml  railway.json
claimpilot/: BUILD_YOUR_OWN_CASE_PROMPT.md  BUILD_YOUR_OWN_CASE_SPEC.md  CLAIMPILOT.md  CLAIMPILOT_API_DEPLOYMENT.md  COMBINE_LANDING_DEMO.md  COMPLIANCE.md  README.md  claimpilot-landing-2.jsx  claimpilot-landing-interactive.jsx  nixpacks.toml  pyproject.toml  requirements.txt
claimpilot/api/: __init__.py  demo_cases.py  main.py  report_builder.py  template_loader.py  validate_packs.py
claimpilot/templates/: cp_auto_oap1.yaml  cp_cgl.yaml  cp_eo.yaml  cp_health.yaml  cp_marine.yaml  cp_property_ho3.yaml  cp_travel.yaml  cp_wsib.yaml
claimpilot/tests/: __init__.py  conftest.py  test_audit_simulation.py  test_condition_evaluator.py  test_engine.py  test_models.py  test_policy_packs.py  test_real_claims.py  test_seed_precedents.py
decisiongraph-complete/: .build-version  .dockerignore  AMLE-P88-2026-report-v2.1.1.txt  AMLE-P88-2026-report.txt  DEPLOY.md  Dockerfile  Dockerfile.deploy  FIELD_AUDIT_REPORT.md  README.md  RULE_COVERAGE_AUDIT.md  SPEC_ALIGNMENT_AUDIT.md  STRESS_TEST_RESULTS.md  debug_similarity.py  demo.py  demo_corporate.py  generate_demo_reports.py  generate_validation_reports.py  nixpacks.toml  pyproject.toml  railway.json  report_bridge.py  requirements.txt  run_layering_case.py  run_pep_pain_case.py  run_precedent_check.py  run_structuring_case.py  validate_all_reports.py  validate_report.py  validation_exceptions.yml
decisiongraph-complete/.planning/: CLAUDE_CODE_BACKEND_TASK.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
decisiongraph-complete/cases/: pep_moretti_bundle.json  pep_moretti_case.json
decisiongraph-complete/cli/: __init__.py  replay.py  validate.py
decisiongraph-complete/docker/: Dockerfile  compose.yaml
decisiongraph-complete/docs/: ARCHITECTURE.md  DecisionGraph_Precedent_Engine_v3_Specification.md  GENESIS_CHECKLIST.md  HOW_TO_ADD_REPORT_SECTION.md  PHASE_INSURANCE_KERNEL_INTEGRATION.md  PRECEDENT_OUTCOME_MODEL_V2.md  PRECEDENT_SCORING.md  REPORT_V2_FIX_SPEC.md  ROADMAP.md  SCHEMA_V1.3.md  report-fixes-prompt.md  schema_v1.3.md
decisiongraph-complete/release/: BANK_REPORT_PROMPT.md  CHANGELOG.md  RELEASE_MANIFEST.md  SBOM.spdx.json  config.example.yaml  input_schema.json  provenance.txt  runbook.md
decisiongraph-complete/schemas/: output.report.schema.json
decisiongraph-complete/scripts/: audit_precedent_distribution.py  audit_seed_coverage.py  audit_seed_coverage_report.json  gen_sbom.sh  normalize_report.py  run_corpus.py
decisiongraph-complete/service/: __init__.py  demo_cases.py  main.py  suspicion_classifier.py  template_loader.py  validate_output.py
decisiongraph-complete/specs/: DecisionGraph.tla  DecisionGraphV2.tla
decisiongraph-complete/templates/: dg_kyc_onboarding.yaml  dg_ongoing_monitoring.yaml  dg_pep_sanctions.yaml  dg_reporting.yaml  dg_txn_monitoring.yaml
decisiongraph-complete/test_corpus/: dual_gate_test_cases.json  run_test_corpus.py
decisiongraph-complete/tests/: conftest.py  test_actions.py  test_adversarial_authorization.py  test_adversarial_injection.py  test_adversarial_integrity.py  test_adversarial_tampering.py  test_adversarial_traversal.py  test_anchors.py  test_backtest.py  test_bank_report.py  test_bootstrap.py  test_bridge_bitemporal.py  test_canon.py  test_citations.py  test_commit_gate.py  test_commit_gate_signatures.py  test_comparability_gate.py  test_confidence.py  test_contamination_prevention.py  test_core.py  test_domain_registry.py  test_engine.py  test_engine_promotion.py  test_exceptions.py  test_field_comparators.py  test_gates.py  test_golden_report.py  test_governed_confidence.py  test_hash_scheme.py  test_insurance_kernel_integration.py  test_judgment.py  test_justification.py  test_lineage_visualizer.py  test_overlay_context.py  test_pack.py  test_policy_simulation.py  test_policyhead.py  test_precedent_registry.py  test_precedent_scoring_v3.py  test_promotion.py  (+19 more)
decisiongraph-complete/validation_harness/: __init__.py  batch.py  catalog.py  exceptions.py  output.py  runner.py  types.py
decisiongraph-complete/validation_reports/: 01_PAIN_CASE_PEP_Legal_Fees.md  01_PAIN_CASE_PEP_Legal_Fees.txt  02_HARD_STOP_Sanctions_Match.md  02_HARD_STOP_Sanctions_Match.txt  03_BEHAVIORAL_STR_Conflicting_Explanations.md  04_STRUCTURING_Maple_Leaf_Corp.txt  (+4 more)
(+611 files in other folders)
